manifests/urlshortener/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: urlshortener
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: short.av0.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: urlshortener
                port:
                  number: 8123
